configs/k3s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: edge-terrarium
  labels:
    app: nginx
    project: edge-terrarium
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
