configs/k3s/service-sink-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-sink
  namespace: edge-terrarium
  labels:
    app: service-sink
    project: edge-terrarium
spec:
  selector:
    app: service-sink
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
